# ROS2_Robot

./: README.md  ROS2-server_node.md  ROS2_Servernode.md  robot_system_paper.aux  robot_system_paper.fdb_latexmk  robot_system_paper.fls  robot_system_paper.out  robot_system_paper.tex
model_build/: .latexmkrc  README.txt  main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv  uestc-article.cls
src/agv_bridge/include/agv_bridge/: device_handler.hpp  handlers.hpp  robot.hpp  robots.hpp
src/agv_bridge/src/: websocket_bridge_node.cpp
src/agv_bringup/: README.md
src/agv_bringup/launch/: agv.launch.xml
src/agv_description/: README.md
src/agv_description/meshes/: tool.STL
src/agv_description/urdf/: agv.xacro
src/agv_hardware/: CMakeLists.txt  README.md  ROS2.md
src/agv_hardware/include/agv_hardware/: agv_hardware.hpp  agv_hardware_node.hpp  config.hpp
src/agv_hardware/src/: agv_hardware_interface.cpp  agv_hardware_node.cpp
src/agv_moveit_config/: README.md
src/agv_protocol/: README.md
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: camera_tf.yaml
src/camera/include/camera/nodes/: astras_node.hpp
src/camera/src/astras/: astras_camera.cpp
src/camera/src/nodes/: astras_node.cpp  video_server  video_web_server.py
src/eddy_current_sensor_pkg/: package.xml  setup.cfg  setup.py
src/eddy_current_sensor_pkg/eddy_current_sensor_pkg/: adc_parser.py  command  da_config.py  sensor_node.py  tcp_client.py
src/pathplannernode/: README.md
src/pathplannernode/src/pathplanner/: setup.py
src/pathplannernode/src/pathplanner/pathplanner/: attention_path_ros2.py  local_coordinate.py  pointcloud_processing.py  visualization.py
src/pathplannernode/src/pathplanner/pathplanner_ros/: pathplanner_ros2_node.py  pathplanner_ros2_node_yuan.py
src/realsense-ros/realsense2_camera/: CMakeLists.txt
src/robot_move_ws/src/robot_go_target/: CMakeLists.txt  package.xml
src/robot_move_ws/src/robot_go_target/config/: robot_config.yaml
src/robot_move_ws/src/robot_go_target/include/robot_go_target/: universal_robot_driver.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/factory/: robot_factory.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/impl/agv/: agv_robot_move.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/impl/air/: air_robot_move.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/impl/duct/: duct_robot_move.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/impl/mag/: mag_robot_move.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/interface/: robot_move_base.hpp
src/robot_move_ws/src/robot_go_target/include/robot_go_target/util/: serial_port_helper.hpp
src/robot_move_ws/src/robot_go_target/launch/: gotarget.launch.py
src/robot_move_ws/src/robot_go_target/src/: robot_gotarget_node.cpp  universal_robot_driver.cpp
src/robot_move_ws/src/robot_go_target/src/factory/: robot_factory.cpp
src/robot_move_ws/src/robot_go_target/src/impl/agv/: agv_robot_move.cpp
src/robot_move_ws/src/robot_go_target/src/impl/air/: air_robot_move.cpp
src/robot_move_ws/src/robot_go_target/src/impl/duct/: duct_robot_move.cpp
src/robot_move_ws/src/robot_go_target/src/impl/mag/: mag_robot_move.cpp
src/robot_move_ws/src/robot_go_target/src/util/: serial_port_helper.cpp
src/wall_robot_pkg/: README.md
src/wall_robot_pkg/launch/: system_bringup.launch.xml
src/wall_robot_pkg/wall_robot_pkg/: mission_controller_node.py  vision_processor_node.py
